<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/Equipment_menu"
            android:icon="@drawable/ic_menu_backpack"
            android:title="@string/equipment_tab" />
        <item
            android:id="@id/guides"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/Guide_tab" />
        <item
            android:id="@id/random_wheel"
            android:icon="@drawable/ic_menu_parachutist"
            android:title="@string/Jump_roulette_tab" />

        //add new navigation menu options here

    </group>


    <item android:title="Spread the word!!">
        <menu>
            <item
                android:id="@id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
