<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/screen_area">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="FNG Picture"
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="top"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/main_screen_eq_button"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/equipment_tab"
            android:layout_marginTop="@dimen/main_screen_button_spacing"/>
        <Button

            android:id="@+id/main_screen_jump_roulette"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Jump_roulette_tab"
            android:layout_marginTop="@dimen/main_screen_button_spacing"/>
        <Button

            android:id="@+id/main_screen_weapon_compare"
            android:layout_width="@dimen/main_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Weapon_compare_Tab"
            android:layout_marginTop="@dimen/main_screen_button_spacing"/>




    </LinearLayout>



</RelativeLayout>