<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eq_SG_Pump"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:src="@drawable/shotgun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/table_divider">


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/table_divider_thickness"
            android:background="@color/table_divider"></View>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:gravity="center"
                android:text="@string/table_header"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" UC "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" R "
                android:textColor="@color/table_text_color" />


        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/table_divider_thickness"></View>


        <TableRow

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:text="@string/table_damage"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:text="@string/table_head_shot"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:text="@string/table_fire_rate"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:text="@string/table_reload_time"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:text="@string/table_Dps"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginEnd="@dimen/table_divider_thickness"
                android:background="@color/table_first_column_background"
                android:text="@string/table_Mag_size"
                android:textColor="@color/table_text_color"
                android:textSize="@dimen/table_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:background="@color/weapon_green"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_divider_thickness"
                android:layout_marginLeft="@dimen/table_divider_thickness"
                android:background="@color/weapon_blue"
                android:gravity="center"
                android:text=" 000 "
                android:textColor="@color/table_text_color" />

        </TableRow>


    </TableLayout>


</android.support.constraint.ConstraintLayout>